<resources>
    <string name="app_name">GitPopular</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="day">day</string>
    <string name="week">week</string>
    <string name="month">month</string>
    <string name="css">css</string>
    <string name="java">java</string>
    <string name="all">all</string>
    <string name="javascript">javascript</string>
    <string name="cjiajia">c++</string>
    <string name="c">c#</string>
    <string name="s">search</string>
    <string name="trend">trend</string>
    <string name="popular">popular</string>
    <string name="change_theme">change theme</string>
    <string name="poular_tag_change">change tag of popular</string>
    <string name="trend_tag_change">change tag of trend</string>
    <string name="language">language</string>
    <string name="time">time</string>
</resources>
